Fix layout issues on small devices

--- a/css/utility.css
+++ b/css/utility.css
@@ -332,7 +332,7 @@
 .landing-container h2
 {
     text-align: center;
-    padding-top: 35vh;
+    padding-top: 30vh;
 }
 
 .more-info-button
@@ -577,8 +577,23 @@
     text-align: center;
     margin-left: 9%;
     margin-top: 1em;
-    height: 4rem;
+    margin-bottom: 2em;
+    height: 8rem;
     width: 80%;
+    box-sizing: border-box;
+}
+
+.stripe-info .image-container
+{
+    padding-bottom: 1em;
+    height: 70%;
+    width: 100%;
+}
+
+.stripe-info img
+{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .stripe-info a
